add glosarry section id

--- a/pages/git-dasar.html
+++ b/pages/git-dasar.html
@@ -55,7 +55,7 @@
       <h1 class="title">Git</h1>
       <article>
         <ol>
-          <li>
+          <li id="glosarry">
             <h2>Glosarry</h2>
             <ol class="expand_list">
               <li>
