feat: add git basic concept module

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Version COntrol Sytem</title>
+    <title>Version Control Sytem</title>
     <link rel="stylesheet" href="./src/css/index.css" />
     <link rel="shortcut icon" href="./src/img/OIP.jfif" type="image/x-icon" />
   </head>
