--- a/pages/git-dasar.html
+++ b/pages/git-dasar.html
@@ -3,37 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Git</title>
-    <link rel="stylesheet" href="./../src/css/index.css" />
+    <title>GIT</title>
+    <link rel="stylesheet" href="./../../src/css/index.css" />
     <link
       rel="shortcut icon"
-      href="./../src/img/OIP.jfif"
+      href="./../../src/img/js-logo.jpg"
       type="image/x-icon"
     />
   </head>
   <body>
+    <!-- navigation -->
     <nav>
       <div class="nav_title">
-        <a href="./index.html">Version Control System</a>
+        <a href="./../../index.html">Rangkuman Javascript</a>
       </div>
       <div class="nav_bar" id="navBar">
         <div class="nav_link">
-          <a href="./pages/git-dasar.html">Git</a>
+          <a href="./index.html">GIT</a>
         </div>
         <div class="nav_link">
-          <a href="./pages/github.html">GitHub</a>
+          <a href="./../oop/index.html">OOP</a>
         </div>
         <div class="nav_link">
-          <a href="./pages/flex-box.html">Navigation-Link-3</a>
+          <a href="./../dom/index.html">DOM</a>
         </div>
         <div class="nav_link">
-          <a href="./pages/grid.html">Navigation-Link-4</a>
+          <a href="./../async/index.html">Asyn</a>
         </div>
         <div class="nav_link">
-          <a href="./pages/responsive-web-design.html">Navigation-Link-5</a>
+          <a href="./../fetch-api/index.html">Fetch API</a>
         </div>
         <div class="nav_link">
-          <a href="./pages/example.html">Navigation-Link-6</a>
+          <a href="./../src/css/index.css">Node Js</a>
         </div>
       </div>
       <div class="nav_menu" id="navMenu">
@@ -51,13 +52,15 @@
         </svg>
       </div>
     </nav>
+    <!-- main-content -->
     <main>
-      <h1 class="title">Git</h1>
+      <h1 class="title">GIT</h1>
       <article>
         <ol>
+          <!-- glosarry -->
           <li id="glosarry">
             <h2>Glosarry</h2>
-            <ol class="expand_list">
+            <ol>
               <li>
                 <h3>Repository</h3>
                 <p>Tempat penyimpanan untuk proyek perangkat lunak yang menggunakan Git untuk kontrol versi.</p>
@@ -112,35 +115,35 @@
               </li>
             </ol>
           </li>
+          <!-- Konsep Dasar Git -->
           <li>
-            <h2></h2>
-            <p></p>
-          </li>
-          <li>
-            <h2></h2>
-            <p></p>
-          </li>
-          <li>
-            <h2></h2>
-            <p></p>
-          </li>
-          <li>
-            <h2></h2>
-            <p></p>
-          </li>
-          <li>
-            <h2></h2>
-            <p></p>
-          </li>
-          <li>
-            <h2></h2>
-            <p></p>
+            <h2>Konsep Dasar GIT</h2>
+            <ol>
+              <li>
+                <h3>Apa Itu GIT</h3>
+                <p>Git adalah sebuah <i>version control system</i> yang sangat populer yang digunakan untuk mengelola perubahan dalam source code software. Diciptakan oleh Linus Torvalds pada tahun 2005, Git dirancang untuk menjadi ringan, cepat, dan memiliki dukungan untuk kolaborasi yang efisien.</p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+            </ol>
           </li>
         </ol>
       </article>
     </main>
-
-    <!-- script -->
     <script type="module" src="./../src/js/index.js"></script>
   </body>
 </html>
